[package]
name = "procedural_texture_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
noise = "0.8.2"
petgraph = "0.6.4"
rusvid_core = { git = "https://github.com/LetsMelon/rusvid" }
