[package]
name = "procedural_texture_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
noise = "0.8.2"
petgraph = "0.6.4"
rusvid_core = { git = "https://github.com/LetsMelon/rusvid" }
itertools = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
once_cell = "1.18.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.4", features = [
    'ImageData',
    'CanvasRenderingContext2d',
    'console',
] }

[profile.dev.rusvid_core]
inherit = "release"
